# MLOps-project1

./: Dockerfile  app.py  pyproject.toml  requirements.txt  setup.py  template.py
src/constants/: __init__.py
